--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 <body>
 
-<h1>testi vuh</h1>
-<p>testi miau</p>
+<h1>kissa runo</h1>
+<p>Kissa suihkuun asteli,
+itsensä se kasteli.
+Kulmakarvat sitten pesi,
+viiksistäkin valui vesi.
+Siitä nautti kissa kovin,
+suihkutteli vielä tovin.
+Koko harhaluulon edestä,
+ettei kissat pitäisi vedestä.</p>
 
 </body>
 </html>
