--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <body>
 
 <h1>kissa runo</h1>
-<p>Kissa suihkuun asteli,
-itsensä se kasteli.
-Kulmakarvat sitten pesi,
-viiksistäkin valui vesi.
-Siitä nautti kissa kovin,
-suihkutteli vielä tovin.
-Koko harhaluulon edestä,
-ettei kissat pitäisi vedestä.</p>
+<p>Kissa suihkuun asteli,</p>
+<p>itsensä se kasteli.</p>
+<p>Kulmakarvat sitten pesi,</p>
+<p>viiksistäkin valui vesi.</p>
+<p>Siitä nautti kissa kovin,</p>
+<p>suihkutteli vielä tovin.</p>
+<p>Koko harhaluulon edestä,</p>
+<p>ettei kissat pitäisi vedestä.</p>
 
 </body>
 </html>
