--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
+<style>
+body {
+  background-color: linen;
+}
 
+h1 {
+  color: maroon;
+  margin-left: 40px;
+}
+</style>
+</head>
+<body>
 <h1>kissa runo</h1>
 <p>Kissa suihkuun asteli,</p>
 <p>itsensä se kasteli.</p>
