--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@ h1 {
 <p>Koko harhaluulon edestä,</p>
 <p>ettei kissat pitäisi vedestä.</p>
 
+  <img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?cs=srgb&dl=pexels-pixabay-45201.jpg&fm=jpg" width="500" height="500">
+
 </body>
 </html>
